added single char deferred routine

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
+
 		<title>Alessio Carrafa</title>
 		<link href="style.css" rel="stylesheet" type="text/css">
 
@@ -11,7 +13,7 @@
 	</head>
 	<body>
 		<div id="player_data">
-			<div wait="0" speed="50">Ciao sono Alessio,</div>
+			<div wait="0" speed="500">Ciao sono Alessio,</div>
 			<div wait="1000" speed="50" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="2000" speed="50" inline="true">B questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="1000" speed="50" inline="true">C questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
