--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 	</head>
 	<body>
 		<div id="player_data">
-			<div wait="0" speed="500">Ciao sono Alessio,</div>
-			<div wait="1000" speed="50" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
-			<div wait="2000" speed="50" inline="true">B questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
-			<div wait="1000" speed="50" inline="true">C questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="0" delay="500" inline="true">Ciao sono Alessio,</div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="1000" delay="50" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="2000" delay="50" inline="true">B questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="1000" delay="50" inline="true">C questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 		</div>
-		<div id="player_area"></div>
+		<div id="player_area"><div id="console_indicator" class="blink"></div></div>
 	</body>
 </html>
