--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 
 		<title>Alessio Carrafa</title>
+
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />
 		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script type="text/javascript" src="bower_components/jQuery/dist/jQuery.min.js"></script>
@@ -14,7 +16,7 @@
 	<body>
 		<div id="player_data">
 			<div wait="0">alessio@TypeSite:~$ </div>
-			<div wait="0" delay="500" inline="true">Ciao sono Alessio,</div>
+			<div wait="0" delay="150" inline="true">Ciao sono Alessio,</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="1000" delay="50" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
