added clear attribute, code clean, style fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<title>Alessio Carrafa</title>
 
-		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />
+		<!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />-->
 		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script type="text/javascript" src="bower_components/jQuery/dist/jQuery.min.js"></script>
@@ -16,13 +16,17 @@
 	<body>
 		<div id="player_data">
 			<div wait="0">alessio@TypeSite:~$ </div>
-			<div wait="0" delay="150" inline="true">Ciao sono Alessio,</div>
+			<div wait="0" delay="25" inline="true">Ciao sono Alessio,</div>
+			<div clear="true"></div>
 			<div wait="0">alessio@TypeSite:~$ </div>
-			<div wait="1000" delay="50" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="2000" delay="25" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
-			<div wait="2000" delay="50" inline="true">B questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="2000" delay="25" inline="true">B questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
-			<div wait="1000" delay="50" inline="true">C questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div wait="1000" delay="25" inline="true">C questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
+			<div clear="true"></div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="2000" delay="25" inline="true">Well done!</div>
 		</div>
 		<div id="player_area"><div id="console_indicator" class="blink"></div></div>
 	</body>
