--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="player_data">
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="0" delay="25" inline="true">Ciao sono Alessio,</div>
-			<div clear="true"></div>
+			<div wait="2000" clear="true"></div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="2000" delay="25" inline="true">A questa è una fantastica cazzata!!! ma serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
