--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
 		<div id="player_data">
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="0" delay="25" inline="true">Ciao sono Alessio,</div>
-			<div wait="2000" clear="true"></div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="2000" delay="25">clear</div>
+			<div wait="1000" clear="true"></div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="2000" delay="25" inline="true">A questa è una fantastica cazzata e serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="2000" delay="25" inline="true">B questa è una fantastica cazzata e serve per vedere quanto sei coglione :D</div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="1000" delay="25" inline="true">C questa è una fantastica cazzata e serve per vedere quanto sei coglione :D</div>
-			<div clear="true"></div>
+			<div wait="0">alessio@TypeSite:~$ </div>
+			<div wait="2000" delay="25">clear</div>
+			<div wait="1000" clear="true"></div>
 			<div wait="0">alessio@TypeSite:~$ </div>
 			<div wait="2000" delay="25" inline="true">Well done!</div>
 		</div>
